# companion

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml
src/companion/: __init__.py  app.py  config.py  llm.py  memory.py  stt.py  tts.py  web.py
src/companion/templates/: index.html
